--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
-    <title>Rhye – AJAX Portfolio HTML5 Template</title>
+    <title>Humans Who Move</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <meta content="telephone=no" name="format-detection"/>
     <meta name="HandheldFriendly" content="true"/>
@@ -40,8 +40,8 @@
         <div class="preloader__content">
           <!-- header -->
           <div class="preloader__header mt-auto">
-            <div class="preloader__heading h2">Rhye Kinsey</div>
-            <div class="preloader__subline small-caps mt-1">Creative Developer</div>
+            <div class="preloader__heading h2">Humans Who Move</div>
+            <div class="preloader__subline small-caps mt-1">Humans who move mountains.</div>
           </div>
           <!-- - header -->
           <!-- counter -->
