--- a/index.html
+++ b/index.html
@@ -374,48 +374,45 @@
 
               </header>
             </div>
+
             <div class="section-masthead__wrapper-scroll-down section-masthead__wrapper-scroll-down_center">
               <div class="circle-button js-circle-button">
-                <!-- curved label -->
+
                 <div class="circle-button__outer">
                   <div class="circle-button__wrapper-label">
                     <div class="circle-button__label small-caps">Start Reading</div>
                   </div>
                 </div>
-                <!-- - curved label -->
-                <!-- geometry wrapper -->
+
                 <div class="circle-button__inner">
                   <div class="circle-button__circle" data-arts-scroll-down="data-arts-scroll-down" data-arts-cursor="data-arts-cursor" data-arts-cursor-hide-native="true" data-arts-cursor-scale="0">
                     <svg class="svg-circle" viewBox="0 0 60 60" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <circle class="circle" cx="30" cy="30" r="29" fill="none"></circle>
                     </svg>
                   </div>
-                  <!-- browsers with touch support -->
                   <div class="circle-button__icon circle-button__icon-touch">
                     <svg enable-background="new 0 0 64 64" height="512" viewBox="0 0 64 64" width="512" xmlns="http://www.w3.org/2000/svg">
                       <path d="m32 8c-1.104 0-2 .896-2 2v39.899l-14.552-15.278c-.761-.799-2.026-.832-2.828-.069-.8.762-.831 2.027-.069 2.827l16.62 17.449c.756.756 1.76 1.172 2.829 1.172 1.068 0 2.073-.416 2.862-1.207l16.586-17.414c.762-.8.73-2.065-.069-2.827-.799-.763-2.065-.731-2.827.069l-14.552 15.342v-39.963c0-1.104-.896-2-2-2z"></path>
                     </svg>
                   </div>
-                  <!-- - browsers with touch support -->
-                  <!-- - browsers without touch support -->
                   <div class="circle-button__icon circle-button__icon-mouse">
                     <svg class="svg-mouse" width="23px" height="35px" viewBox="0 0 23 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                       <!-- border -->
                       <path class="svg-mouse__border" d="M11.5,0 C5.15875132,0 0,5.23135343 0,11.6610111 L0,23.3396542 C0,29.7691456 5.15875132,35 11.5,35 C17.8412487,35 23,29.7693119 23,23.3396542 L23,11.6610111 C23,5.23135343 17.8410847,0 11.5,0 Z M21.7222404,23.3396542 C21.7222404,29.0545544 17.136538,33.7037222 11.5,33.7037222 C5.86346203,33.7037222 1.27775956,29.0545544 1.27775956,23.3396542 L1.27775956,11.6610111 C1.27775956,5.946111 5.86346203,1.29627781 11.5,1.29627781 C17.136538,1.29627781 21.7222404,5.94594466 21.7222404,11.6610111 L21.7222404,23.3396542 Z"></path>
-                      <!-- - border -->
-                      <!-- wheel -->
+
                       <path class="svg-mouse__wheel" d="M11.5,4 C11.2238902,4 11,4.28321727 11,4.63321727 L11,10.3667827 C11,10.7167827 11.2238902,11 11.5,11 C11.7761098,11 12,10.7167827 12,10.3667827 L12,4.63321727 C11.9998717,4.28321727 11.7761098,4 11.5,4 Z"></path>
-                      <!-- - wheel -->
                     </svg>
                   </div>
-                  <!-- - browsers without touch support -->
                 </div>
-                <!-- - geometry wrapper -->
               </div>
             </div>
             <div class="section-image section-masthead__background section-masthead__background_fullscreen">
               <div class="section-image__wrapper">
-                <div class="lazy-bg" data-src="img/hwm/placeholder.jpg"></div>
+                <div class="lazy-bg">
+                  <video playsinline autoplay muted loop poster="img/hwm/placeholder.jpg" id="bgvideo">
+                    <source src="img/de_hwm.mp4" type="video/mp4">
+                  </video>
+                </div>
               </div>
               <!-- <div class="overlay overlay_dark section-masthead__overlay"></div> -->
             </div>
@@ -794,6 +791,47 @@
         gl_FragColor = finalTexture;
 
       }
+
+    </script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      var min_w = 300; // minimum video width allowed
+      var vid_w_orig;  // original video dimensions
+      var vid_h_orig;
+
+      $(function() { // runs after DOM has loaded
+          vid_w_orig = parseInt($('#bgvideo')[0].videoWidth);
+          vid_h_orig = parseInt($('#bgvideo')[0].videoHeight);
+
+          $(window).resize(function () { resizeToCover(); });
+          $(window).trigger('resize');
+      });
+
+      function resizeToCover() {
+          console.log(vid_w_orig + ' ' + vid_h_orig)
+          console.log(jQuery(window).width() + ' ' + jQuery(window).height())
+
+          // set the video viewport to the window size
+          jQuery($('#bgvideo')[0]).width(jQuery(window).width());
+          jQuery($('#bgvideo')[0]).height(jQuery(window).height());
+
+          // use largest scale factor of horizontal/vertical
+          var scale_h = jQuery(window).width() / vid_w_orig;
+          var scale_v = jQuery(window).height() / vid_h_orig;
+          var scale = scale_h > scale_v ? scale_h : scale_v;
+
+          // don't allow scaled width < minimum video width
+          if (scale * vid_w_orig < min_w) {scale = min_w / vid_w_orig;};
+
+          // now scale the video
+          jQuery($('#bgvideo')[0]).width(scale * vid_w_orig);
+          jQuery($('#bgvideo')[0]).height(scale * vid_h_orig);
+          // and center it by scrolling the video viewport
+          jQuery($('#bgvideo')[0]).scrollLeft((jQuery($('#bgvideo')[0]).width() - jQuery(window).width()) / 2);
+          jQuery($('#bgvideo')[0]).scrollTop((jQuery($('#bgvideo')[0]).height() - jQuery(window).height()) / 2);
+      };
+
 
     </script>
     <script src="js/vendor.js"></script>
