--- a/index.html
+++ b/index.html
@@ -794,7 +794,7 @@
 
     </script>
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
       var min_w = 300; // minimum video width allowed
       var vid_w_orig;  // original video dimensions
