--- a/index.html
+++ b/index.html
@@ -552,10 +552,10 @@
                         </div>
 
                         <div class="lqd-column col-md-4 mb-30">
-                          <p class="mb-0 font-size-16 font-weight-normal">Mohamed</p>
-                          <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Turkey</p>
+                          <p class="mb-0 font-size-16 font-weight-normal">Research Staff</p>
+                          <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Turkey, Botswana, El Salvador, and Argentina</p>
                           <hr>
-                          <p class="font-size-14"></p>
+                          <p class="font-size-14">Finally, we have additional research staff in the field whose names are unlisted due to risks to theirs or their families' safety.</p>
                         </div>
 
                       </div><!-- /.row -->
