--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
                 <section class="widget widget_rhye_logo">
                   <!-- content --><a class="logo" href="index.html" target="_blank">
                     <div class="logo__wrapper-img">
-                      <img class="logo__img-primary" src="img/logo.png"/>
-                      <img class="logo__img-secondary" src="img/logo-white.png"/>
+                      <img class="logo__img-primary logo__small" src="img/logo.png"/>
+                      <img class="logo__img-secondary logo__small" src="img/logo-white.png"/>
                     </div></a>
                   <!-- - content -->
                 </section>
