--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                 <section class="widget widget_rhye_logo">
                   <!-- content --><a class="logo" href="index.html" target="_blank">
                     <div class="logo__wrapper-img">
-                      <img class="logo__img-primary logo__small" src="img/logo.png"/>
+                      <img class="logo__img-primary logo__small" src="img/logo-white.png"/>
                       <img class="logo__img-secondary logo__small" src="img/logo-white.png"/>
                     </div></a>
                   <!-- - content -->
@@ -313,7 +313,7 @@
               <div class="col-lg-6 footer__column text-center text-lg-center order-lg-2">
                 <section class="widget widget_text">
                   <!-- content -->
-                  <div class="textwidget">
+                  <div class="textwidget copyright-bottom">
                     <p><small>© 2020 Humans Who Move</small></p>
                   </div>
                   <!-- - content -->
