--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <link rel="apple-touch-icon" sizes="152x152" href="img/content/apple-icon-152x152.png"/>
     <link rel="apple-touch-icon" sizes="180x180" href="img/content/apple-icon-180x180.png"/>
     <link rel="icon" type="image/png" sizes="192x192" href="img/content/android-icon-192x192.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="img/content/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="96x96" href="img/content/favicon-96x96.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="img/content/favicon-16x16.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon.png"/>
     <link rel="manifest" href="img/content/manifest.json"/>
     <meta name="msapplication-TileColor" content="#ffffff"/>
     <meta name="msapplication-TileImage" content="img/content/ms-icon-144x144.png"/>
     <meta name="theme-color" content="#ffffff"/>
-    <link rel="icon" type="image/x-icon" href="img/content/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png"/>
   </head>
   <body>
 
