--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                           <p class="mb-0 font-size-16 font-weight-normal">Don and Vincent</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dzaleka Camp (Malawi)</p>
                           <hr>
-                          <p class="font-size-14">Don and Vincent have spent the past 16 years raising the voices of the refugees in the Dzaleka Camp. They have worked to improve communication between camp residents and the UNHCR, and currently run a support group for adult male refugees to express their emotions in a safe space.</p>
+                          <p class="font-size-14">Don and Vincent have spent the past 16 years raising the voices of refugees in the Dzaleka Camp. They have worked to improve communication between camp residents and the UNHCR and promoted youth involvement in Dzaleka Camp by organizing youth debates and founding Youth Voices of Refugees, a community-based organization for youth refugee advocacy. Currently, they run a support group for adult male refugees to express their emotions in a safe space.</p>
                         </div><!-- /.col-md-4 -->
 
                         <div class="lqd-column col-md-4 mb-30">
