--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                           <p class="mb-0 font-size-16 font-weight-normal">Patrick</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dzaleka Camp (Malawi)</p>
                           <hr>
-                          <p class="font-size-14">Patrick is a self-taught computer programmer and social activist in Dzaleka Camp who has dedicated his life to serving others. Patrick believes that community empowerment is the quickest route to social change and over the years has established a camp-wide computer programming seminar and advocated on behalf of his community for equal pay and workers' rights.</p>
+                          <p class="font-size-14">Patrick is a self-taught computer programmer and social activist in Dzaleka Camp who has dedicated his life to serving others. Patrick believes that community empowerment is the fastest route to social change. Over the years, he established a camp-wide programming seminar and advocated on behalf of his community for equal pay and workers' rights. HWM, for him, is a way to create better environments for youth and inspire them to take charge of their own futures.</p>
                         </div>
 
                         <div class="lqd-column col-md-4 mb-30">
