--- a/index.html
+++ b/index.html
@@ -147,119 +147,126 @@
                         <h2>Our People</h2>
                       </div>
                       <div class="row">
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Pragya Chawla</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Co-director</p>
                           <hr>
                           <p class="font-size-14">Activist and entrepreneur raised in the Middle East, Pragya is a sociology researcher at Stanford University and a Partner at OutBrave. She has led and consulted on business strategy for dozens of organizations such as Ojay Greene. Her leadership has received over 15 honors, including by the Tony Blair Institute for Global Change and international ambassadors.</p>
                         </div>
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Caroline Brewton</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Co-director</p>
                           <hr>
                           <p class="font-size-14">Dauntless devotion to rebuilding the lives of the most vulnerable, Caroline is an immigration case worker and a Partner at OutBrave. She has managed security crises, unlawful detention, medical aid, and gender violence for over a thousand families, including with IRC and World Relief. She led Hermanos en el Camino, the largest migrant shelter in Mexico, and worked in Eastern Europe.</p>
                         </div>
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Said</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dadaab Camp (Kenya)</p>
                           <hr>
                           <p class="font-size-14">Originally from Somalia, Said is a community leader in Dadaab Camp who works tirelessly to expand career and educational opportunities to all residents. He has worked closely with the World Food Program to improve supply distribution systems within the Dadaab Camp, and is a mentor for groups of young political activists.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Garad</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Mogadishu (Somalia)</p>
                           <hr>
                           <p class="font-size-14">Garad is a fierce advocate for IDPs in the Mogadishu community. He has become an indispensable resource for the IDPs living in Mogadishu, traveling across the region nearly every day to connect IDPs with legal counsel, job opportunities, and education for their children.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Don and Vincent</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dzaleka Camp (Malawi)</p>
                           <hr>
                           <p class="font-size-14">Don and Vincent have spent the past 16 years raising the voices of refugees in the Dzaleka Camp. They have worked to improve communication between camp residents and the UNHCR and promoted youth involvement in Dzaleka Camp by organizing youth debates and founding Youth Voices of Refugees, a community-based organization for youth refugee advocacy. Currently, they run a support group for adult male refugees to express their emotions in a safe space.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Jean</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Port-au-Prince (Haiti)</p>
                           <hr>
                           <p class="font-size-14">Growing up in Port-au-Prince, Jean understood that the only way to combat poverty-driven emigration was through opportunity. To that end, he has committed his life to providing college and career opportunities to underserved populations across the country and equipping young students with the skills they need to break cycles of poverty and inequality in their home communities.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Sadiq</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Kakuma Camp (Kenya)</p>
                           <hr>
                           <p class="font-size-14">Sadiq has spent the past 13 years in Kakuma Camp training camp youth to become freelancers. As an administrator at the African Initiative for Human Development, Sadiq trains camp youth to become freelancers and develop their sense of self-confidence and financial independence.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Farah</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dadaab Camp (Kenya)</p>
                           <hr>
                           <p class="font-size-14">Farah works tirelessly to improve information accessibility inside Dadaab camp. He has partnered with the UNHCR to assess and improve information flow throughout the camp, and sees HWM as an opportunity to connect refugees with the information they need to continue on their journey.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Patrick</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dzaleka Camp (Malawi)</p>
                           <hr>
                           <p class="font-size-14">Patrick is a self-taught computer programmer and social activist in Dzaleka Camp who has dedicated his life to serving others. Patrick believes that community empowerment is the fastest route to social change. Over the years, he established a camp-wide programming seminar and advocated on behalf of his community for equal pay and workers' rights. HWM, for him, is a way to create better environments for youth and inspire them to take charge of their own futures.</p>
                         </div>
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">MB*</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Maiduguri (Nigeria)</p>
                           <hr>
                           <p class="font-size-14">MB* joined the HWM team in order to be a voice for his community after witnessing how often the IDP community in Nigeria is excluded by aid organizations from discussions about their own wants and needs. He sees HWM as an opportunity to invite IDPs to the conversations from which they are so often excluded.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Maria Claudia</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Bogota (Colombia)</p>
                           <hr>
                           <p class="font-size-14">Originally from Venezuela but living in Bogota, Maria Claudia is passionate about sharing the stories of others. A witness to the Venezuelan crisis and subsequent refugee flow into Colombia, Maria Claudia believes that everyone's story-whether it is one of success or one of struggle-has the right to be heard. But for her, HWM is about more than listening; it is about using these stories to make a positive impact in the lives of others. </p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Mariajose Gavilan</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Costa Rica</p>
                           <hr>
-                          <p class="font-size-14">Mariajose believes that in order to truly know ourselves, we need to listen to the stories of others. To that end, she has spent years designing and implementing art therapy programs for child refugees in Germany as a means of coming terms with their own experiences and emotions. In Costa Rica, she has worked to address the lack of psychological services available for the country's underserved refugee population by starting therapy clinics in migrant shelters and resettlement units.</p>
+                          <p class="font-size-14">Mariajose believes that in order to truly know ourselves, we need to listen to the stories of others. To that end, she has spent years designing art therapy programs for child refugees in Germany as a means of coming terms with their own experiences. In Costa Rica, she has worked to address the lack of psychological services available for the country's underserved refugee population by starting therapy clinics in migrant shelters and resettlement units.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Tarek</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Lyon (France)</p>
                           <hr>
                           <p class="font-size-14">After leaving Syria and crossing through eight countries to arrive in France, Tarek decided to dedicate his time to helping others the way that he had been helped throughout his journey. Before finishing his studies in Lyon, Tarek spent a year helping newly-arrived refugees acclimate to their new home, and joined HWM to address the critical information gap between refugees and the organizations that seek to help them.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">John Peter</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Uganda & Kenya</p>
                           <hr>
                           <p class="font-size-14">John Peter is a passionate learner, writer, and artist who believes in the power of a good story. John Peter started his own branding agency, Justified Pixels, to help organizations tell their stories in ways that are impactful, and sees HWM as an opportunity to let refugees tell their own story to the world, possibly for the first time.</p>
                         </div><!-- /.col-md-4 -->
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Abshir</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dadaab Camp (Kenya)</p>
                           <hr>
                           <p class="font-size-14">Abshir is a translator and qualitative researcher with a passion for conversation. Throughout his time in Dadaab Camp, Abshir has worked on many public-awareness campaigns regarding public health and camp safety and is excited to see HWM emerge as a consistent source of vital information for isolated populations in Dadaab.</p>
                         </div>
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Idi</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Kakuma Camp (Kenya)</p>
                           <hr>
                           <p class="font-size-14">Idi is a Congolese refugee and leader of the Kakuma Freelancing Agency, an organization that supports young refugees wanting to participate in the economy by training and supporting them in their freelancing career. Idi began working with the Kakuma Freelancing Agency after receiving his degree in social work in 2014 as a way to pursue his passion for creating opportunity for refugees in the camp.</p>
                         </div>
 
-                        <div class="lqd-column col-md-4 mb-30">
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
+                          <p class="mb-0 font-size-16 font-weight-normal">Alex</p>
+                          <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dadaab Camp (Kenya)</p>
+                          <hr>
+                          <p class="font-size-14">Alex is a humanitarian worker who has dedicated his life entirely to the service of others. He strongly believes that no human being is above the other and that the only way to break free from the inequality of the world is to give vulnerable populations the opportunity to create their own futures. To that end, he has helped to establish the Dadaab Freelancing Agency in Dadaab to mentor and train refugees to build their own tomorrow.</p>
+                        </div>
+
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Unlisted</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Research Staff</p>
                           <hr>
