--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                           <p class="mb-0 font-size-16 font-weight-normal">Unlisted</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Research Staff</p>
                           <hr>
-                          <p class="font-size-14">Finally, we have additional field staff in Turkey, Botswana, El Salvador, and Argentina whose names are unlisted due to risks to theirs or their families' safety.</p>
+                          <p class="font-size-14">Finally, we have additional field staff in Turkey, Botswana, El Salvador, and Argentina whose names are unlisted due to risks for theirs or their families' safety.</p>
                         </div>
 
                       </div><!-- /.row -->
