--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@
                         </div>
 
                         <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
+                          <p class="mb-0 font-size-16 font-weight-normal">Collins</p>
+                          <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Researcher, Dadaab Camp (Kenya)</p>
+                          <hr>
+                          <p class="font-size-14">Collins is an entrepreneurship and business consultant empowering refugees and marginalized communities in North Eastern Kenya. Collins provides refugees and the surrounding communities with training on entrepreneurship, digital technology, leadership, and ethical business practices in order to create opportunities for youth living in volatile areas.</p>
+                        </div>
+
+                        <div class="lqd-column col-xl-4 col-lg-6 col-md-6 col-sm-10 offset-xl-0 offset-lg-0 offset-md-0 offset-sm-1 mb-30">
                           <p class="mb-0 font-size-16 font-weight-normal">Unlisted</p>
                           <p class="mt-0 mb-0 font-size-16 ltr-sp-1 font-italic">Research Staff</p>
                           <hr>
@@ -274,7 +281,6 @@
                         </div>
 
                       </div><!-- /.row -->
-
 
                     </div>
                     <!-- - post content-->
@@ -286,54 +292,41 @@
           </section>
           <!-- - SINGLE POST -->
         </main>
-        <!-- PAGE FOOTER -->
+
         <footer class="footer container-fluid" id="page-footer" data-arts-theme-text="dark" data-arts-footer-logo="primary">
 
-          <!-- widgets bottom area -->
           <div class="footer__area pt-sm-3 pb-sm-1 pt-0 pb-0">
 
             <div class="row align-items-center">
-              <!-- widget LOGO -->
               <div class="col-lg-3 footer__column text-center text-lg-left order-lg-1">
                 <section class="widget widget_rhye_logo">
-                  <!-- content --><a class="logo" href="index.html" target="_blank">
+                  <a class="logo" href="index.html" target="_blank">
                     <div class="logo__wrapper-img">
                       <img class="logo__img-primary logo__small" src="img/logo-white.png"/>
                       <img class="logo__img-secondary logo__small" src="img/logo-white.png"/>
                     </div></a>
-                  <!-- - content -->
                 </section>
               </div>
-              <!-- - widget LOGO -->
-              <!-- widget SOCIAL -->
+
               <div class="col-lg-3 footer__column text-center text-lg-right order-lg-3">
                 <section class="widget widget_rhye_social">
-                  <!-- content -->
                   <ul class="social">
                     <li class="social__item"><a class="fa fa-envelope" href="mailto:caroline@outbrave.org?subject=Humans Who Move"></a></li>
                   </ul>
-                  <!-- - content -->
                 </section>
               </div>
-              <!-- - widget SOCIAL -->
-              <!-- widget TEXT -->
               <div class="col-lg-6 footer__column text-center text-lg-center order-lg-2">
                 <section class="widget widget_text">
-                  <!-- content -->
                   <div class="textwidget copyright-bottom">
                     <p><small>© 2020 Humans Who Move</small></p>
                   </div>
-                  <!-- - content -->
                 </section>
               </div>
-              <!-- - widget TEXT -->
             </div>
           </div>
-          <!-- - widgetst bottom area -->
         </footer>
-        <!-- - PAGE FOOTER -->
       </div>
-      <!-- - PAGE MAIN -->
+
     </div>
     <canvas id="js-webgl"></canvas>
     <!-- PhotoSwipe -->
